# LineSegmentsIntersectionSplitter

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  intersectionsplitterConfig.cmake.in  run_cppcheck.sh
apps/: CMakeLists.txt
apps/visualeditor/: CMakeLists.txt  GraphicalLineSegment.cpp  GraphicalLineSegment.h  GraphicsView.cpp  GraphicsView.h  InteractiveGraphicsScene.cpp  InteractiveGraphicsScene.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Utils.hpp  VisualEditor.cpp  graphicallinesegment.cpp  graphicallinesegment.h  graphicsview.cpp  interactivegraphicsscene.cpp  interactivegraphicsscene.h  mainwindow.cpp  mainwindow.ui  utils.hpp  visualeditor.cpp
benchmarks/: CMakeLists.txt  intersectionsplitterbenchmark.cpp
cmake/: PlatformLinux.cmake
intersectionsplitter/: CMakeLists.txt  eventqueue.cpp  eventqueue.h  intersectionsplitter.cpp  intersectionsplitter.h  intersectionsplitterutils.cpp  intersectionsplitterutils.h  linesegment.cpp  linesegment.h  printutils.cpp  printutils.h  segmentset.cpp  segmentset.h  statusstructure.cpp  statusstructure.h
intersectionsplitter/include/intersectionsplitter/: EventQueue.h  IntersectionSplitter.h  IntersectionSplitterUtils.h  LineSegment.h  PrintUtils.h  SegmentSet.h  StatusStructure.h  intersectionsplitter_api.h
intersectionsplitter/src/: EventQueue.cpp  IntersectionSplitter.cpp  IntersectionSplitterUtils.cpp  LineSegment.cpp  PrintUtils.cpp  SegmentSet.cpp  StatusStructure.cpp
intersectionsplitter/tests/: CMakeLists.txt  IntersectionSplitterRegressionTest.cpp  IntersectionSplitterTest.cpp  StatusStructureTest.cpp  TestUtils.hpp  intersectionsplitterregressiontest.cpp  intersectionsplittertest.cpp  statusstructuretest.cpp  testutils.hpp
